# agent-dmarc

./: .env.example  .gitignore  README.md  TODO.md  agentuity.yaml  config.py  main.py  pyproject.toml  server.py
agents/dmarc_email/: agent.py  gmail.py
resources/: templates.py
utils/: gmail.py  parser.py  retry.py  slack.py  validators.py
