[project]
name = "dmarc"
version = "0.1.0"
description = "DMARC is a project aimed to automate process of analyzing DMARC report and resolve DMARC issues"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "agentuity>=0.0.83",
    "openai>=1.78.1",
    "google-api-python-client==2.169.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "slack-sdk==3.35.0",
    "parsedmarc==8.18.1"
]